--- a/main-auction-service/src/main/resources/templates/login.html
+++ b/main-auction-service/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
         <h1>Please Log In</h1>
             <div th:if="${param.error}">Invalid username and password.</div>
             <div th:if="${param.logout}">You have been logged out.</div>
-            <form th:action="@{/perform_login}" method="post">
+            <form th:action="@{/login/perform_login}" method="post">
                 <div>
                     <input type="text" name="username" placeholder="Username"/>
                 </div>
