Account managing page and Personal info modifiacations page

--- a/frontend/blocks/registration-form/__button/registration-form__button.css
+++ b/frontend/blocks/registration-form/__button/registration-form__button.css
@@ -12,3 +12,7 @@
 .registration-form__button:hover {
     background-color: var(--color_accent_focus);
 }
+
+.registration-form__button_secondary:hover ~ .registration-form__button {
+    background-color: var(--color_main);
+}
