--- a/frontend/blocks/cards/cards.css
+++ b/frontend/blocks/cards/cards.css
@@ -1,7 +1,10 @@
 .cards {
-    display: flex;
     flex-wrap: wrap;
     gap: 20px;
     padding: 20px 80px;
-    /*justify-content: center;*/
+    display: grid;
+    justify-content: center;
+    column-gap: 20px;
+    grid-template-columns: repeat(auto-fit, 402px);
+    width: 100%;
 }
