--- a/frontend/blocks/card/__gallery/card__gallery.css
+++ b/frontend/blocks/card/__gallery/card__gallery.css
@@ -1,6 +1,6 @@
 .card__gallery {
     width: 100%;
-    background-color: blue;
+    background-color: var(--color_main);
     position: relative;
     border-radius: 8px;
     height: 500px;
