--- a/frontend/blocks/cards/cards.css
+++ b/frontend/blocks/cards/cards.css
@@ -5,6 +5,6 @@
     display: grid;
     justify-content: center;
     column-gap: 20px;
-    grid-template-columns: repeat(auto-fit, 402px);
+    grid-template-columns: repeat(auto-fill, 402px);
     width: 100%;
 }
