--- a/main-auction-service/src/main/resources/static/blocks/registration-form/__button/registration-form__button.css
+++ b/main-auction-service/src/main/resources/static/blocks/registration-form/__button/registration-form__button.css
@@ -7,6 +7,8 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
+    text-decoration: none;
 }
 
 .registration-form__button:hover {
