add radio button, update function refill balance

--- a/main-auction-service/src/main/resources/static/pages/balance.css
+++ b/main-auction-service/src/main/resources/static/pages/balance.css
@@ -27,3 +27,4 @@
 @import "../blocks/registration-form/__radio/__mock/registration-form__radio__mock.css";
 @import "../blocks/registration-form/__field/_radio/registration-form__field_radio.css";
 @import "../blocks/registration-form/__label/_inline/registration-form__label_inline.css";
+@import "../blocks/registration-form/__field/_radio/_small/registration-form__field_radio-small.css";
