--- a/main-auction-service/src/main/resources/static/pages/lot.css
+++ b/main-auction-service/src/main/resources/static/pages/lot.css
@@ -34,3 +34,9 @@
 
 @import "../blocks/menu/menu.css";
 @import "../blocks/menu/__option/menu__option.css";
+
+@import "../blocks/registration-form/__radio/registration-form__radio.css";
+@import "../blocks/registration-form/__radio/__mock/registration-form__radio__mock.css";
+@import "../blocks/registration-form/__field/_radio/registration-form__field_radio.css";
+@import "../blocks/registration-form/__label/_inline/registration-form__label_inline.css";
+@import "../blocks/registration-form/__field/_radio/_small/registration-form__field_radio-small.css";
